2011-09-04    <Jim@X64PC>

	* CPU/version.h (SPIM_VERSION):
	Version 9.1.4

2011-08-14    <Jim@LS-RED>

	* QtSpim/console.cpp, QtSpim/datawin.cpp, QtSpim/regwin.cpp, QtSpim/textwin.cpp [Jordan Thoms (jords12)]:
	Subwindows can receive events before main window is fully
	construct if subwindows are undocked, which lead to a null-pointer reference.

	* spim/spim.c (write_assembled_code) [George Prekas (prekgeo)]:
	Added command line argument to dump contents of text and data segments.

	* spim/spim.c:
	Clean up code for dumping text segment and comments.

2011-07-30    <Jim@LS-RED>

	* QtSpim/help/HP_AppA.html [Tatpong Katanyukul <tatpong@gmail.com>]:
	Minor typos in instruction descriptions (bgezal, div.d, sub.d).

2011-07-26    <Jim@LS-RED>

	* spim/Makefile [flyn]:
	Added $(DESTDIR) to spim/xspim install targets.

2011-07-24  Jim Larus  <jim@linuxPC>

	* Version 9.1.3

	* bin/release-debian:
	Parameterize for x64 linux.

2011-07-23  Jim Larus  <jim@linux64>

	* xspim/buttons.c:
	Changes to satisfy C++'s stricter typing rules.

2011-07-23    <Jim@X64PC>

	* QtSpim/menu.cpp (help_AboutSPIM) [Sergio Barrachina Mir <barrachi@icc.uji.es>]:
	Improve the About QtSpim dialog.

	* QtSpim/regwin.cpp (changeValue):
	Suppress compiler warning.

	* QtSpim/QtSpim.pro:
	Generate compressed helpfile and help collection separately to
	work around bug in buildhelpcollection's -o argument.

2011-07-22    <Jim@X64PC>

	* Version 9.1.2

	* pervasive:
	Changed C code to use bool instead of int to make things clear,
	although no longer vanilla C code.

	* QtSpim/datawin.cpp [William A. Barrett wbarrett1076@comcast.net]:
	Fix data segment display to show ASCII chars on a partial line.
	Only display printable ASCII chars.


2011-07-21    <Jim@X64PC>

	* Version 9.1.1

	* QtSpim/console.cpp, 	QtSpim/console.h, QtSpim/datatextedit.h,
	QtSpim/datawin.cpp, QtSpim/regtextedit.h, 	QtSpim/regwin.cpp,
	QtSpim/spimview.cpp, QtSpim/spimview.ui, QtSpim/texttextedit.h,